// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractCanceledToSeller should render correctly for seller when buyer canceled 1`] = `
<View>
  <PeachText>
    The buyer has decided to cancel the trade, reducing their reputation.
  </PeachText>
  <PeachText>
    You can choose to be refunded, or to re-publish your offer.
  </PeachText>
</View>
`;

exports[`ContractCanceledToSeller should render correctly for seller when buyer canceled with expired escrow 1`] = `
<View>
  <PeachText>
    The buyer has decided to cancel the trade, reducing their reputation.
  </PeachText>
</View>
`;

exports[`ContractCanceledToSeller should render correctly for seller when mediator canceled 1`] = `
<View>
  <PeachText>
    The dispute mediator has decided to cancel the trade.
  </PeachText>
  <PeachText>
    You can choose to be refunded, or to re-publish your offer.
  </PeachText>
</View>
`;

exports[`ContractCanceledToSeller should render correctly for seller when mediator canceled with expired escrow 1`] = `
<View>
  <PeachText>
    The dispute mediator has decided to cancel the trade.
  </PeachText>
</View>
`;

exports[`ContractCanceledToSeller should render correctly for seller when seller canceled 1`] = `
<View>
  <PeachText>
    You've canceled the trade.
  </PeachText>
  <PeachText>
    You can choose to be refunded, or to re-publish your offer.
  </PeachText>
</View>
`;

exports[`ContractCanceledToSeller should render correctly for seller when seller canceled with expired escrow 1`] = `
<View>
  <PeachText>
    You've canceled the trade.
  </PeachText>
</View>
`;
